# PortableFirefox

./: CMakeLists.txt  RegistryCleaner.reg  SetDefaultBrowser.bat  appid.hpp  jsettings.hpp  launcher.cpp  processutil.hpp  taskbargroup.hpp  update.hpp
config/: PortableFirefox.bat  autoconfig.cfg  autoconfig.js
